- autoconf: dependencies support for DEC/Compaq/HP cxx compiler (Vadim Zeitlin)
- autoconf: dependencies support for HP aCC compiler (Vadim Zeitlin)
- autoconf: dependencies support for SGI MIPSpro compiler (Vadim Zeitlin)
- autoconf: fixed shared libraries with gcc under AIX 5 (Vadim Zeitlin)
- autoconf: added support for Intel C/C++ compiler (Vadim Zeitlin)
- win32 makefiles: fixed cleaning list of files (Francesco Montorsi)
- many improvements to the documentation (Warren Young)
- support for conditional installation of <subproject> targets
  (Francesco Montorsi)
- added fileList() function (loosely based on Francesco Montorsi's patch)
- fixed bug #1246534: pch file passed to resource compiler in dmars formats


Version 0.1.9.1
---------------

- msvc6prj: fixed handling of MSVC6PRJ_MERGED_TARGETS hack


Version 0.1.9
-------------

- dmars: fixed precompiled headers to not recompile everything
- mingw: added dependency tracking
- dmars: fixed subprojects
- don't escape \ in Python expressions
- fixed copy-files on Solaris (Michael Wetherell)
- added dependencies tracking for Sun CC (Michael Wetherell)
- msvc: fixed to work with free MS tools (Włodzimierz Skiba)
- new format (unfinished!): xcode2 for XCode project files (David Elliott)
- new format: symbian for Symbian tools (Włodzimierz Skiba)
- msevc4prj: support C++ exceptions
- autoconf: treat Cygwin as Unix (Michael Wetherell)
- added --keep-going option to bakefile_gen


Version 0.1.8
-------------

- gnu: define PLATFORM_UNIX
- gnu: implemented dependencies tracking
- msvc*: use /EHsc instead of /GX, which is deprecated in VC8 (Vadim Zeitlin)
- added scripts for making Debian package (Vadim Zeitlin)
- gnu: fixed <module> targets to not have "lib" prefix in name
- added --quiet option
- gnu,mingw: fixed <threading>multi</threading> to use -pthread or -mthreads
  for compilation and not only linking


Version 0.1.7
-------------

- fixed running under Python 2.2 (Francesco Montorsi)